Minor css fixes and tweaks for the dark mode (#2464)
* Remove dark mode media query

* Minor css fixes

* Delete no longer used fix (introduced after normalize.css)

* Move dark mode tweaks to its scss file

* Add dark mode to the API docs

* Add fixed color to the separator bars in right menu

* Avoid important in css

--- a/dashboard/src/components/Header/ContextSelector.scss
+++ b/dashboard/src/components/Header/ContextSelector.scss
@@ -28,10 +28,6 @@
   font-size: small;
 }
 
-.kubeapps-dropdown-items {
-  margin-block-start: 0.5em;
-}
-
 .kubeapps-dropdown-text {
   margin-left: 0.2rem;
   margin-right: 0.7rem;
